# bsdiff

./: CMakeLists.txt  README.md  bsdiff.c  bslib.h  bspatch.c
libbz/: CMakeLists.txt
